<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".map.MapActivity">

    <LinearLayout
        android:id="@+id/linearColumn5palastwe"
        style="@style/groupStylegray_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_111pxh"
        android:paddingTop="@dimen/_21pxv"
        android:paddingEnd="@dimen/_111pxh"
        android:paddingBottom="@dimen/_21pxv"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt5palastwelve"
            style="@style/txtFascinateInlineregular30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_28pxv"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/app_name"
            tools:text="@string/lbl_5_pa_las_12" />

    </LinearLayout>

    <TextView
        android:id="@+id/msg_nearby_restaurants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/msg_nearby_restaurants"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/linearColumn5palastwe"
        tools:text="@string/msg_nearby_restaurants"
        style="@style/groupStylegray_300"/>

    <Button
        android:id="@+id/btnRetry"
        style="@style/btnSolidRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_13pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_13pxv"
        android:layout_marginTop="@dimen/_30pxv"
        android:visibility="invisible"
        android:singleLine="true"
        android:text="@string/lbl_retry"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_nearby_restaurants" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:context=".MapActivity"
        app:layout_constraintTop_toBottomOf="@id/msg_nearby_restaurants"
        app:layout_constraintBottom_toTopOf="@id/frameBottombar"
        app:layout_constraintHeight_default="wrap">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameBottombar"
        style="@style/groupStylegray_800cornerRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/linearRowhome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_marginBottom="@dimen/_21pxv"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linearColumnHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="@dimen/_8pxh"
                android:paddingEnd="@dimen/_8pxh">

                <ImageView
                    android:id="@+id/imageHomeImage"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icons8_home_100"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_icons8_home_100" />

                <TextView
                    android:id="@+id/txtHome"
                    style="@style/txtInderregular10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginEnd="@dimen/_2pxh"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/lbl_home"
                    tools:text="@string/lbl_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumnSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageSearchImage"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icons8_search_100"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_icons8_search_100" />

                <TextView
                    android:id="@+id/txtSearch"
                    style="@style/txtInterregular10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/lbl_search"
                    tools:text="@string/lbl_search" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumnMaps"
                style="@style/groupStylegray_600cornerRadius"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageMapsImage"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icons8_map_100_1"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_icons8_map_100_1" />

                <TextView
                    android:id="@+id/txtMaps"
                    style="@style/txtInterregular10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginEnd="@dimen/_2pxh"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/lbl_maps"
                    tools:text="@string/lbl_maps" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearColumnProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageProfileImage"
                    android:layout_width="@dimen/_32pxh"
                    android:layout_height="@dimen/_32pxh"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_icons8_user_100"
                    tools:ignore="ContentDescription"
                    tools:src="@drawable/img_icons8_user_100" />

                <TextView
                    android:id="@+id/txtProfile"
                    style="@style/txtInterregular10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginEnd="@dimen/_2pxh"
                    android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/lbl_profile"
                    tools:text="@string/lbl_profile" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>